--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,8 +1,8 @@
 # Enable 256 colors within tmux apps
 set-option -g default-terminal "screen-256color"
 
-# Enable RGB color if running in xterm
-set-option -sa terminal-overrides ",xterm*:Tc"
+# Enable RGB color and italics if running in xterm
+set-option -sa terminal-overrides ",xterm*:Tc:sitm=\E[3m"
 
 # Enable mouse mode
 set -g mouse on
@@ -17,3 +17,20 @@ set-option -sg escape-time 10
 unbind C-b
 set-option -g prefix C-a
 bind-key C-a send-prefix
+
+# Map 'r' to reload config
+bind r source-file ~/.tmux.conf
+
+# Use vim-like keybindings for window navigation
+bind h select-pane -L
+bind l select-pane -R
+bind j select-pane -D
+bind k select-pane -U
+
+# Customize appearance
+set -g status-position top
+set -g status-style 'bg=#3E4452 fg=#ABB2BF'
+set -g status-left ' [#S] '
+set -g pane-border-style 'bg=#3E4452 fg=#3E4452'
+set -g pane-active-border-style 'bg=#3E4452 fg=#ABB2BF'
+set -g pane-border-status off
