Update tmux config

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -16,10 +16,10 @@ set-option -sg escape-time 10
 # Remap prefix from 'C-b' to 'C-a'
 unbind C-b
 set-option -g prefix C-a
-bind-key C-a send-prefix
+bind C-a send-prefix
 
 # Map 'r' to reload config
-bind r source-file ~/.tmux.conf
+bind R source-file ~/.tmux.conf
 
 # Use vim-like keybindings for window navigation
 bind h select-pane -L
