Update tmux config

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -13,13 +13,13 @@ set -g set-clipboard on
 # Decrease escape time
 set-option -sg escape-time 10
 
-# Remap prefix from 'C-b' to 'C-a'
+# Remap prefix from 'C-b' to 'C-q'
 unbind C-b
-set-option -g prefix C-a
-bind C-a send-prefix
+set-option -g prefix C-q
+bind C-q send-prefix
 
-# Map 'r' to reload config
-bind R source-file ~/.tmux.conf
+set-window-option -g mode-keys vi
+bind-key -T copy-mode-vi 'y' send -X copy-selection
 
 # Use vim-like keybindings for window navigation
 bind h select-pane -L
@@ -34,3 +34,5 @@ set -g status-left ' [#S] '
 set -g pane-border-style 'bg=#3E4452 fg=#3E4452'
 set -g pane-active-border-style 'bg=#3E4452 fg=#ABB2BF'
 set -g pane-border-status off
+
+# Hint: use 'source-file ~/.tmux.conf' to reload this
