--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,38 +1,41 @@
-# Enable 256 colors within tmux apps
+# Enable 256 colors within tmux
 set-option -g default-terminal "screen-256color"
 
 # Enable RGB color and italics if running in xterm
 set-option -sa terminal-overrides ",xterm*:Tc:sitm=\E[3m"
 
 # Enable mouse mode
-set -g mouse on
+set-option -g mouse on
 
 # Enable clipboard
-set -g set-clipboard on
+set-option -g set-clipboard on
 
 # Decrease escape time
 set-option -sg escape-time 10
 
 # Remap prefix from 'C-b' to 'C-q'
-unbind C-b
+unbind-key C-b
 set-option -g prefix C-q
-bind C-q send-prefix
+bind-key C-q send-prefix
 
+# Enable vim-like bindings for selection and copying (with some additions)
 set-window-option -g mode-keys vi
+bind-key -T copy-mode-vi 'v' send -X begin-selection
 bind-key -T copy-mode-vi 'y' send -X copy-selection
+bind-key -T copy-mode-vi 'Y' send -X copy-end-of-line
 
 # Use vim-like keybindings for window navigation
-bind h select-pane -L
-bind l select-pane -R
-bind j select-pane -D
-bind k select-pane -U
+bind-key h select-pane -L
+bind-key l select-pane -R
+bind-key j select-pane -D
+bind-key k select-pane -U
 
 # Customize appearance
-set -g status-position top
-set -g status-style 'bg=#3E4452 fg=#ABB2BF'
-set -g status-left ' [#S] '
-set -g pane-border-style 'bg=#3E4452 fg=#3E4452'
-set -g pane-active-border-style 'bg=#3E4452 fg=#ABB2BF'
-set -g pane-border-status off
+set-option -g status-position top
+set-option -g status-style 'bg=#3E4452 fg=#ABB2BF'
+set-option -g status-left ' [#S] '
+set-option -g pane-border-style 'bg=#3E4452 fg=#3E4452'
+set-option -g pane-active-border-style 'bg=#3E4452 fg=#ABB2BF'
+set-option -g pane-border-status off
 
 # Hint: use 'source-file ~/.tmux.conf' to reload this
