Update tmux config

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,11 +1,18 @@
 # Enable 256 colors within tmux
-set-option -g default-terminal "screen-256color"
+set-option -g default-terminal "tmux-256color"
 
-# Enable RGB color and italics if running in xterm
-set-option -sa terminal-overrides ",xterm*:Tc:sitm=\E[3m"
+# Enable RGB color if running in xterm or alacritty
+set-option -sa terminal-overrides ",xterm*:RGB"
+set-option -sa terminal-overrides ",alacritty:RGB"
 
 # Enable mouse mode
 set-option -g mouse on
+
+# Enable focus events
+set -g focus-events on
+
+# Increase history limit
+set -g history-limit 50000
 
 # Enable clipboard
 set-option -g set-clipboard on
