--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -40,3 +40,6 @@ set -g status-left ' [#S] '
 set -g pane-border-style 'bg=#3E4452 fg=#3E4452'
 set -g pane-active-border-style 'bg=#3E4452 fg=#ABB2BF'
 set -g pane-border-status off
+
+# Enable popups
+bind ` run-shell tmux-popup
