Simplify tmux config slightly

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,8 +1,5 @@
-# Enable 256 colors within tmux
-set -g default-terminal "tmux-256color"
-
 # Enable RGB color if running in xterm or alacritty
-set -a terminal-overrides ",xterm*:RGB"
+set -a terminal-overrides ",xterm-256color:RGB"
 set -a terminal-overrides ",alacritty:RGB"
 
 # Enable mouse, focus, and clipboard
@@ -36,10 +33,8 @@ bind k select-pane -U
 # Customize appearance
 set -g status-position top
 set -g status-style 'bg=#3E4452 fg=#ABB2BF'
-set -g status-left ' [#S] '
 set -g pane-border-style 'bg=#3E4452 fg=#3E4452'
 set -g pane-active-border-style 'bg=#3E4452 fg=#ABB2BF'
-set -g pane-border-status off
 
 # Enable popups
 bind ` run-shell tmux-popup
