--- a/helix/config.toml
+++ b/helix/config.toml
@@ -10,3 +10,10 @@ select = "underline"
 
 [editor.indent-guides]
 render = true
+
+[keys.insert]
+"C-[" = "normal_mode"
+
+[keys.normal]
+"C" = ["select_mode", "goto_line_end", "change_selection"]
+"D" = ["select_mode", "goto_line_end", "delete_selection"]
